added automation on swagger
